Update _dynamic_content_list.scss to use mobile first approach and fix issue where list items were breaking the container on tablet and mobile.

--- a/_docker/drupal/drupal-filesystem/web/themes/custom/rhdp/rhd-frontend/src/styles/assembly/_dynamic_content_list.scss
+++ b/_docker/drupal/drupal-filesystem/web/themes/custom/rhdp/rhd-frontend/src/styles/assembly/_dynamic_content_list.scss
@@ -129,7 +129,6 @@
 .rhd-list-entry {
   display: grid;
   grid-template-rows: 1fr auto;
-  max-width: 160px;
   margin-bottom: 2rem;
   grid-column-gap: 1rem;
 
@@ -137,7 +136,7 @@
     grid-row-start: -1;
   }
 
-  @include mobile-landscape-and-up {
+  @include tablet-portrait {
     grid-template-rows: unset;
     grid-template-columns: 1fr auto;
     max-width: 100%;
@@ -149,13 +148,12 @@
   font-size: 14px;
   line-height: 1.4;
   margin-bottom: 8px;
-  
   & > a {
     color: #000;
     text-decoration: none;
   }
 
-  @include mobile-landscape-and-up {
+  @include tablet-portrait {
     display: block;
     font-size: 26px;
     margin-top: 0;
@@ -165,7 +163,7 @@
 .rhd-list-entry--summary {
   display: none;
 
-  @include mobile-landscape-and-up {
+  @include tablet-portrait {
     display: block;
     p {
       font-size: 14px;
@@ -188,16 +186,15 @@
   flex-direction: column;
   justify-content: center;
 
-  @include mobile-landscape-and-up {
+  @include tablet-portrait {
     height: unset;
     display: inherit;
   }
 
   &>img {
-    max-width: 160px;
     max-height: 90px;
 
-    @include mobile-landscape-and-up {
+    @include tablet-portrait {
       max-height: unset;
       max-width: 180px;
     }
